# sysrepo-plugin-dt-sip

./: CMakeLists.txt
config/: asterisk
src/: common.h  rpc.h  sip.c  sip.h
yang/: sip@2015-10-06.yang
